add correct version to drivers